[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sshpubkeys"
authors = [{name = "Olli Jarva", email = "olli@jarva.fi"}]
license = {text = "BSD"}
description = "SSH public key parser"
keywords = ["ssh", "pubkey", "public", "key", "openssh", "ssh-rsa", "ssh-dss", "ssh-ed25519"]
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3"
dependencies = ["cryptography>=2.5"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ojarva/python-sshpubkeys"

[project.optional-dependencies]
dev = ["twine", "wheel", "yapf"]

[tool.setuptools]
packages = ["sshpubkeys"]
include-package-data = false

[tool.setuptools_scm]

