[metadata]
name = sshpubkeys
author = Olli Jarva
author_email = olli@jarva.fi
license = BSD
description = SSH public key parser
keywords = ssh, pubkey, public, key, openssh, ssh-rsa, ssh-dss, ssh-ed25519
url = https://github.com/ojarva/python-sshpubkeys
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Security
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = sshpubkeys
install_requires = cryptography>=2.5
python_requires = >=3
test_suite = tests

[options.extras_require]
dev = twine; wheel; yapf

[bdist_wheel]
universal=1
